--- a/teoria.html
+++ b/teoria.html
@@ -14,7 +14,7 @@
             <li>Alt + tabulador: cambiar entre aplicaciones</li>
             <li>Alt + F4: cerrar la ventana activa</li></ul>
         </ol>
-       <a href="intex.html">
+       <a href="index.html">
         <p>Volver a la pagina</p>
         </a>
     </body>
