--- a/teoria.html
+++ b/teoria.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>TIC</title>
+        <style>
+        body{background:   #fef9b6; font-size: 16px; margin-left: 3%; margin-right: 3%; color:   #d22598 }
+        h1{border: 5px solid; font-size: 40px; text-align: center; color:  #fef9b6; background:  #8163fd}
+        h2{color: #8163fd }
+        </style>
     </head>
     <body>
        
@@ -10,7 +15,7 @@
             <li>ctrl+c: copiar</li>
             <li>Ctrl + V: pegar el contenido del portapapeles</li>            
             <li>Ctrl + X: cortar el portapapeles</li>
-            <li>Ctrl + Z: deshacer laúltima acción</li>
+            <li>Ctrl + Z: deshacer la última acción</li>
             <li>Alt + tabulador: cambiar entre aplicaciones</li>
             <li>Alt + F4: cerrar la ventana activa</li></ul>
         </ol>
