--- a/practicas2.html
+++ b/practicas2.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <title>TIC</title>
+        <style>
+        body{background:   #fef9b6; font-size: 16px; margin-left: 3%; margin-right: 3%; color:   #d22598 }
+        h1{border: 5px solid; font-size: 40px; text-align: center; color:  #fef9b6; background:  #8163fd}
+        h2{color: #8163fd }
+        img{width: 5%; height: 5%}
+        </style>
     </head>
     <body>
       <p> Esta es vuestra primaer práctica.</P>
